# Team-Alchemy-APP

./: .env.example  .gitignore  Dockerfile  LICENSE  Makefile  Procfile  README.md  The Team ALchemy (complete core) App.docx  alembic.ini  docker-compose.yml  main.py  nginx.conf  nixpacks.toml  pyproject.toml  railway.json  requirements-dev.txt  requirements.txt  setup.py
.github/: ISSUE_TEMPLATE.md
.github/workflows/: ci.yml  publish.yml  tests.yml
alembic/: env.py  script.py.mako
config/: __init__.py  logging_config.py  settings.py
docs/: API.md  RAILWAY_DEPLOYMENT.md  index.md
docs/api/: reference.md
docs/deployment/: railway.md
docs/guides/: getting_started.md
examples/: basic_usage.py  team_analysis.py
examples/data/: sample_assessments.json
frontend/: Dockerfile  index.html  package-lock.json  package.json  tailwind.config.cjs  vite.config.js
frontend/src/: App.jsx  index.css
frontend/src/components/academic/MethodologyWizard/: MethodologyWizard.jsx
frontend/src/data/: citationStyles.sample.json
frontend/src/styles/: theme.js
issues/: 1  1.md
scripts/: load_sample_data.py  migrate_database.py  run_tests.sh  setup_database.py
server/: Dockerfile  pyproject.toml  requirements-dev.txt  requirements.txt
server/app/: auth.py  database.py  main.py  models.py  routes.py  schemas.py
server/app/utils/: __init__.py  security.py
server/tests/: test_api.py
src/team_alchemy/: __init__.py  worker.py
src/team_alchemy/api/: __init__.py
src/team_alchemy/api/middleware/: __init__.py  auth.py  validation.py
src/team_alchemy/api/routes/: __init__.py  analysis.py  archetypes.py  assessment.py  psychology.py  teams.py
src/team_alchemy/api/schemas/: __init__.py  archetypes.py  teams.py
src/team_alchemy/cli/: __init__.py  main.py
src/team_alchemy/core/: __init__.py
src/team_alchemy/core/archetypes/: __init__.py  classifier_logic.py  definitions.py  jungian_mapper.py  traits.py
src/team_alchemy/core/assessment/: __init__.py  calculator.py  models.py  validator.py
src/team_alchemy/core/psychology/: __init__.py  case_study_mapper.py  freudian.py  jungian.py  shadow_work.py
src/team_alchemy/core/scoring/: __init__.py  composite_scorer.py
src/team_alchemy/core/utils/: __init__.py  metrics.py  transformers.py
src/team_alchemy/data/: __init__.py  models.py  repository.py
src/team_alchemy/intelligence/: __init__.py
src/team_alchemy/intelligence/optimizers/: __init__.py  team_optimizer.py
src/team_alchemy/intelligence/predictors/: __init__.py  ml_predictor.py
src/team_alchemy/intervention/: __init__.py  action_plans.py  recommendations.py
static/: index.html
static/assets/: index-Cz0jCuuB.css  index-dw-3ysAj.js  index-dw-3ysAj.js.map
tests/: __init__.py
tests/config/: test_settings.py  test_validation.py
tests/integration/: test_analysis_api.py  test_api.py  test_assessment_api.py  test_cli.py  test_cli_integration.py  test_end_to_end.py  test_psychology_api.py  test_teams_api.py
tests/unit/: test_archetypes.py  test_cli.py  test_cli_unit.py  test_database.py  test_middleware.py  test_psychology.py  test_redis_celery.py  test_scoring.py  test_team_schemas.py  test_teams.py
tests/unit/api/routes/: test_assessment.py
(+6 files in other folders)
